--- a/web/src/app/inventory/inventory-summary/inventory-summary.component.html
+++ b/web/src/app/inventory/inventory-summary/inventory-summary.component.html
@@ -60,9 +60,9 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Brand Type</mat-label>
                                         <mat-select name="BrandType" [(ngModel)]="data.BrandType" #singleSelect>
-                                            <mat-option value="0">None</mat-option>
-                                            <mat-option value="1">Brand</mat-option>
-                                            <mat-option value="2">Non-Brand</mat-option>
+                                            <mat-option [value]="0">None</mat-option>
+                                            <mat-option [value]="1">Brand</mat-option>
+                                            <mat-option [value]="2">Non-Brand</mat-option>
                                         </mat-select>
                                         <mat-error>
                                             Select Shop
