--- a/web/src/app/report/purchase-report/purchase-report.component.html
+++ b/web/src/app/report/purchase-report/purchase-report.component.html
@@ -1,21 +1,320 @@
 <section class="content">
-    <div class="container-fluid">
-      <div class="block-header">
-        <div class="row clearfix">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
-            <div class="card p-0">
-              <div class="header p-2 py-0 pt-1">
-                <div class="row">
-                  <div class="col-md-2 col-8 p-0 ms-3">
-                    <h2>Purchase Report <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
-                       ></i></h2>
-                  </div>
+  <div class="container-fluid">
+    <div class="block-header">
+      <div class="row clearfix">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
+          <div class="card p-0">
+            <div class="header p-2 py-0 pt-1">
+              <div class="row">
+                <div class="col-md-2 col-8 p-0 ms-3">
+                  <h2>Purchase Report </h2>
                 </div>
               </div>
-
             </div>
+            <mat-tab-group>
+              <mat-tab label="Purchase">
+                <div class="body">
+                  <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getPurchaseMaster()">
+                    <div class="row">
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Purchase From Date</mat-label>
+                          <input matInput name="FromDate" type="date" [(ngModel)]="PurchaseMaster.FromDate"
+                            #DOBcontrol />
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Purchase To Date</mat-label>
+                          <input matInput type="date" name="ToDate" [(ngModel)]="PurchaseMaster.ToDate" />
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Supplier Name</mat-label>
+                          <mat-select name="Supplier" [(ngModel)]="PurchaseMaster.SupplierID" editable="true"
+                            #singleSelect>
+                            <mat-option [value]="0">All</mat-option>
+                            <mat-option *ngFor="let sup of supplierList  let i = index;" [value]="sup.ID">
+                              {{sup.Name}}<span style="float: right;">{{sup.MobileNo1}}
+                              </span>
+                            </mat-option>
+                          </mat-select>
+                          <mat-error>
+                            Select Supplier
+                          </mat-error>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Shop</mat-label>
+                          <mat-select name="shopID" [(ngModel)]="PurchaseMaster.ShopID">
+                            <mat-option [value]="0">All</mat-option>
+                            <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
+                              <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Payment Status</mat-label>
+                          <mat-select name="PaymentStatus" [(ngModel)]="PurchaseMaster.PaymentStatus">
+                            <mat-option [value]="0">All</mat-option>
+                            <mat-option value="Paid">Paid</mat-option>
+                            <mat-option value="Unpaid">Unpaid</mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 mb-0 ">
+                        <button class="me-3" type="submit" mat-raised-button color="primary">
+                          <mat-icon>search</mat-icon> Search
+                        </button>
+                        <button type="button" mat-raised-button color="warn" (click)="purchaseFromReset()">
+                          <mat-icon>refresh</mat-icon> Reset
+                        </button>
+                      </div>
+                    </div>
+                  </form>
+                  <div class="body p-2">
+                      <div class="col-sm-12" style="overflow: auto; height: 450px;">
+                        <table class="table table-striped table-hover table-sm table-bordered"
+                            style="border: 2px solid #fff !important;">
+                            <thead>
+                                <tr style="white-space: nowrap;" >
+                                  <th>S.No <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true"
+                                    type="button" (click)="exportAsXLSXMaster()"></i></th>
+                                  <th>Supplier</th>
+                                  <th>Current Shop</th>
+                                  <th>InvoiceNo</th>
+                                  <th>Invoice Date</th>
+                                  <th>PaymentStatus</th>
+                                  <th>Quantity</th>
+                                  <th>Discount </th>
+                                  <th>SubTotal</th>
+                                  <th>GST Amount </th>
+                                  <th>Grand Total</th>
+                                  <th>SupplierGSTNo</th>
+                                </tr>
+                            </thead>
+                            <tbody class="text-center" >
+                              <tr *ngFor="let s of PurchaseMasterList; let i = index" text="left">
+                                <td> {{ i+1 }} </td>
+                                <td>{{s.SupplierName}}</td>
+                                <td>{{s.ShopName}} <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span></td>
+                                <td>{{s.InvoiceNo}}</td>
+                                <td>{{s.PurchaseDate}}</td>
+                                <td>{{s.PaymentStatus}}</td>
+                                <td>{{s.Quantity}}</td>
+                                <td>{{s.DiscountAmount}} </td>
+                                <td>{{s.SubTotal}}</td>
+                                <td>{{s.GSTAmount}} </td>
+                                <td>{{s.TotalAmount}}</td>
+                                <td>{{s.SupplierGSTNo}}</td>
+                            </tr>
+                            </tbody>
+                            <thead style="color: red; font-weight: 600; font-size: 15px;">
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td></td>
+                              <td class="text-center">{{this.totalQty}}</td>
+                              <td class="text-center">{{this.totalDiscount}}</td>
+                              <td class="text-center">{{this.totalUnitPrice}}</td>
+                              <td class="text-center">{{this.totalGstAmount}}</td>
+                              <td class="text-center">{{this.totalAmount}}</td>
+                              <td></td>
+                            </thead>
+                        </table>
+                     </div>
+                  </div>
+                </div>
+              </mat-tab>
+
+              <mat-tab label="Purchase (Detailed)">
+                <div class="body">
+                  <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getPurchaseDetails()">
+                    <div class="row">
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Purchase From Date</mat-label>
+                          <input matInput name="FromDate" type="date" [(ngModel)]="PurchaseDetail.FromDate"
+                            #DOBcontrol />
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Purchase To Date</mat-label>
+                          <input matInput type="date" name="ToDate" [(ngModel)]="PurchaseDetail.ToDate" />
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Supplier Name</mat-label>
+                          <mat-select name="Supplier" [(ngModel)]="PurchaseDetail.SupplierID" editable="true"
+                            #singleSelect>
+                            <mat-option [value]="0">All</mat-option>
+                            <mat-option *ngFor="let sup of supplierList  let i = index;" [value]="sup.ID">
+                              {{sup.Name}}<span style="float: right;">{{sup.MobileNo1}}
+                              </span>
+                            </mat-option>
+                          </mat-select>
+                          <mat-error>
+                            Select Supplier
+                          </mat-error>
+                        </mat-form-field>
+                      </div>
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                        <mat-form-field class="example-full-width mb-0">
+                          <mat-label>Shop</mat-label>
+                          <mat-select name="shopID" [(ngModel)]="PurchaseDetail.ShopID">
+                            <mat-option [value]="0">All</mat-option>
+                            <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}}
+                              <span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span>
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+
+                      <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                        <mat-form-field class="example-full-width mb-0">
+                            <mat-label>Select Product</mat-label>
+                            <mat-select name="FieldType" [(ngModel)]="PurchaseDetail.ProductCategory"
+                                (selectionChange)="getFieldList()" required #Typecontrol>
+                                <mat-option [value]=0>All</mat-option>
+                                <mat-option *ngFor="let prod of prodList   let i = index;"
+                                    [value]="prod.ID">
+                                    {{prod.Name | uppercase}}
+                                </mat-option>
+                            </mat-select>
+                            <mat-error>
+                                Select Product Type
+                            </mat-error>
+                        </mat-form-field>
+                    </div>
+                      <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 mb-0 ">
+                        <button class="me-3" type="submit" mat-raised-button color="primary">
+                          <mat-icon>search</mat-icon> Search
+                        </button>
+                        <button type="button" mat-raised-button color="warn" >
+                          <mat-icon>refresh</mat-icon> Reset
+                        </button>
+                      </div>
+                    </div>
+                      <!-- spec start -->
+                      <div class="row">
+                        <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0"
+                            *ngFor="let spec of specList ; let i = index;">
+                            <div *ngIf="spec.FieldType === 'DropDown'" class="d-flex">
+                                <mat-form-field class=" me-2 mb-0" *ngIf="spec.DisplayAdd === 0">
+                                    <mat-label>{{spec.FieldName}}</mat-label>
+                                    <mat-select name="{{spec.FieldName+'0'}}" [(ngModel)]="spec.SelectedValue"
+                                        (selectionChange)="getFieldSupportData(i)" editable="true" [required]="spec.Required === 1" #singleSelect>
+                                      <mat-option>
+                                      </mat-option>
+                                      <mat-option *ngFor="let val of spec.SptFilterData" [value]="val.TableValue">
+                                          {{val.TableValue}}
+                                      </mat-option>
+                                    </mat-select>
+                                    <mat-error>
+                                        {{spec.FieldName}} is Required
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                            <div *ngIf="spec.FieldType === 'Text'" class="d-flex">
+                                <mat-form-field class=" mr-0 mb-0">
+                                    <mat-label>{{spec.FieldName}}</mat-label>
+                                    <input matInput name="{{spec.FieldName+'2'}}" [(ngModel)]="spec.SelectedValue"
+                                        [required]="spec.Required === 1" (blur)="getFieldSupportData(i)">
+                                    <mat-error>
+                                        {{spec.FieldName}} is Required
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                            <div *ngIf="spec.FieldType === 'Date'" class="d-flex">
+                                <mat-form-field class=" mr-0 mb-0">
+                                    <mat-label>{{spec.FieldName}}</mat-label>
+                                    <input type="date" matInput name="{{spec.FieldName+'3'}}"
+                                        [(ngModel)]="spec.SelectedValue" editable="true" [required]="spec.Required === 1">
+                                    <mat-error>
+                                        {{spec.FieldName}} is Required
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
+                            <div *ngIf="spec.FieldType === 'boolean'" class="d-flex">
+                                <mat-slide-toggle name="{{spec.FieldName+'3'}}" color="primary"
+                                    class="example-margin" #Multiplecontrolx [(ngModel)]="spec.SelectedValue">
+                                    {{spec.FieldName}}</mat-slide-toggle>
+                            </div>
+                        </div>
+                    </div>
+                    <!--  spec end -->
+                  </form>
+                  <div class="body p-2">
+                      <div class="col-sm-12" style="overflow: auto; height: 450px;">
+                        <table class="table table-striped table-hover table-sm table-bordered"
+                            style="border: 2px solid #fff !important;">
+                            <thead>
+                              <tr style="white-space: nowrap;" >
+                                <th>S.No </th>
+                                <th>InvoiceNo</th>
+                                <th>InvoiceDate</th>
+                                <th>Supplier</th>
+                                <th>GSTNo</th>
+                                <th>Product Type</th>
+                                <th>HSNCode</th>
+                                <th>Product</th>
+                                <th>Qty</th>
+                                <th>Unit Price</th>
+                                <th>Dis</th>
+                                <th>SubTotal <span style="font-size: 8px;">(PriceBeforeTax)</span>  </th>
+                                <th>GST Type</th>
+                                <th>GST%</th>
+                                <th>GSTAmt</th>
+                                <th>Grand Total</th>
+                                <th>BarCode</th>
+                                <th>Payment Status</th>
+                                <th>Retail Price</th>
+                                <th>WholeSale Price</th>
+                                <th>Current Shop</th>
+                              </tr>
+                            </thead>
+                            <tbody class="text-center" >
+                              <tr *ngFor="let s of PurchaseDetailList; let i = index" text="left">
+                                <td>{{ i+1 }} </td>
+                                <td>{{s.InvoiceNo}}</td>
+                                <td>{{s.PurchaseDate}}</td>
+                                <td>{{s.SupplierName}}</td>
+                                <td>{{s.SupplierGSTNo}}</td>
+                                <td>{{s.ProductTypeName}}</td>
+                                <td>{{s.HSNcode}}</td>
+                                <td>{{s.ProductName}}</td>
+                                <td>{{s.Quantity}}</td>
+                                <td>{{s.UnitPrice}}</td>
+                                <td>{{s.DiscountAmount}}</td>
+                                <td>{{s.SubTotal}}</td>
+                                <td>{{s.GSTType}}</td>
+                                <td>{{s.GSTPercentage}}%</td>
+                                <td>{{s.GSTAmount}}</td>
+                                <td>{{s.TotalAmount}}</td>
+                                <td>{{s.BaseBarCode}}</td>
+                                <td>{{s.PaymentStatus}}</td>
+                                <td>{{s.RetailPrice}}</td>
+                                <td>{{s.WholeSalePrice}}</td>
+                                <td>{{s.ShopName}}<span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span></td>
+                              </tr>
+                            </tbody>
+                        </table>
+                     </div>
+                  </div>
+                </div>
+              </mat-tab>
+            </mat-tab-group>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
