--- a/web/src/app/inventory/search-barcode/search-barcode.component.html
+++ b/web/src/app/inventory/search-barcode/search-barcode.component.html
@@ -50,6 +50,9 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
+                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                    <button type="button"  mat-raised-button color="primary">Search</button>
+                               </div>
                             </div>
                             <!-- save product spec start -->
                             <div class="row">
