--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -124,6 +124,7 @@
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
               <a href="javascript:void(0)" [routerLink]="['/report/purchase']" id="collapseExample">Purchase</a>
+              <a href="javascript:void(0)" [routerLink]="['/report/product-transfer']" id="collapseExample">Product Transfer</a>
             </div>
           </div>
           <!-- companyadmin end report -->
