--- a/web/src/app/report/purchase-report/purchase-report.component.html
+++ b/web/src/app/report/purchase-report/purchase-report.component.html
@@ -271,7 +271,7 @@
                         <button class="me-3" type="submit" mat-raised-button color="primary">
                           <mat-icon>search</mat-icon> Search
                         </button>
-                        <button type="button" mat-raised-button color="warn">
+                        <button type="button" mat-raised-button color="warn" (click)="purchaseDetailsFromReset()">
                           <mat-icon>refresh</mat-icon> Reset
                         </button>
                       </div>
