--- a/web/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/web/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -166,7 +166,7 @@
                                                 </td>
                                                 <td></td>
                                                 <td></td>
-                                                <td></td>
+                                                <td>{{this.totalQty}}</td>
                                                 <td></td>
                                                 <td></td>
                                                 <td></td>
