--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -90,9 +90,10 @@
               <a href="javascript:void(0)" [routerLink]="['/inventory/supplier']" id="collapseExample">Supplier</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/purchaseList']" id="collapseExample">Purchase</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/product-transfer']" id="collapseExample">Product Transfer</a>
-              <a href="javascript:void(0)" [routerLink]="['/inventory/inventor-summary']" id="collapseExample">Inventory Summary</a>
+              <a href="javascript:void(0)" [routerLink]="['/inventory/inventory-summary']" id="collapseExample">Product Summary</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/search-barcode']" id="collapseExample">Search Barcode</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/fitterList']" id="collapseExample">Fitter</a>
+              <a href="javascript:void(0)" [routerLink]="['/inventory/pre-order']" id="collapseExample">Pre-Order</a>
             </div>
           </div>
           <!-- companyadmin end Purchseing -->
