--- a/web/src/app/report/purchase-report/purchase-report.component.html
+++ b/web/src/app/report/purchase-report/purchase-report.component.html
@@ -311,7 +311,8 @@
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXDetail()">
                               </i>
-                              <i class="far fa-file-pdf ms-4" style="color: #2433be;font-size: 22px;cursor: pointer;" (click)="PDFdetail()">
+                              <i class="far fa-file-pdf ms-4" style="color: #2433be;font-size: 22px;cursor: pointer;"
+                                (click)="PDFdetail()">
                               </i>
                             </td>
                             <td></td>
@@ -327,7 +328,8 @@
                             <td>{{this.DetailtotalUnitPrice}}</td>
                             <td></td>
                             <td></td>
-                            <td>{{this.DetailtotalGstAmount}}</td>
+                            <td data-mdb-toggle="modal" data-mdb-target="#exampleModal" (click)="openModal(content)">
+                              {{this.DetailtotalGstAmount}}</td>
                             <td>{{this.DetailtotalAmount}}</td>
                             <td></td>
                             <td></td>
@@ -374,3 +376,35 @@
     </div>
   </div>
 </section>
+<!-- model -->
+<ng-template #content role="document" let-modal>
+  <div class="modal-header" style="height: 50px;">
+    <h3 class="modal-title header pt-2" id="exampleModalLabel">GST Amount List</h3>
+    <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+      <div class="row">
+          <table class="table table-striped table-hover table-sm table-bordered"
+            style="border: 2px solid #fff !important;">
+            <thead>
+              <tr>
+                <th>GSTType</th>
+                <th>GSTAmount</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="text-center" *ngFor="let gst of gstdetails let i = index;">
+                <td>{{gst.GSTType}}</td>
+                <td>{{gst.Amount}}</td>
+              </tr>
+            </tbody>
+            <tfoot class="text-center">
+              <tr > 
+                <th style="color: red; font-weight: 600;">Total Amt</th>
+                <th style="color: red; font-weight: 600;">{{this.DetailtotalGstAmount}}</th>
+              </tr>
+            </tfoot>
+          </table>
+      </div>
+  </div>
+</ng-template>
