--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -93,7 +93,7 @@
               <a href="javascript:void(0)" [routerLink]="['/inventory/inventory-summary']" id="collapseExample">Product Summary</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/search-barcode']" id="collapseExample">Search Barcode</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/fitterList']" id="collapseExample">Fitter</a>
-              <a href="javascript:void(0)" [routerLink]="['/inventory/pre-order']" id="collapseExample">Pre-Order</a>
+              <a href="javascript:void(0)" [routerLink]="['/inventory/preOrderList']" id="collapseExample">Pre-Order</a>
             </div>
           </div>
           <!-- companyadmin end Purchseing -->
