--- a/web/src/app/inventory/inventory-summary/inventory-summary.component.html
+++ b/web/src/app/inventory/inventory-summary/inventory-summary.component.html
@@ -15,7 +15,7 @@
                                 <div class="col-md-2">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Select Shop</mat-label>
-                                        <mat-select name="shopID"  [(ngModel)]="data.ShopID">
+                                        <mat-select name="shopID"  [(ngModel)]="data.ShopID" multiple>
                                             <mat-option [value]= 0>All</mat-option>
                                             <mat-option [value]="s.ID" *ngFor="let s of shopList"> {{s.Name}} <span
                                                     [style.color]="'blue'"
