--- a/web/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web/src/app/inventory/product-transfer/product-transfer.component.html
@@ -39,9 +39,9 @@
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Select Barcode</mat-label>
                                         <mat-select name="FieldType" [(ngModel)]="Req.SearchBarCode"
-                                             required #Typecontrol>
+                                             required #Typecontrol (selectionChange)="getProductDataByBarCodeNo()">
                                             <mat-option *ngFor="let bc of barCodeList  let i = index;"
-                                                [value]="bc.Barcode">
+                                                [value]="bc.Barcode"  >
                                                 {{bc.Barcode}} # {{bc.BarCodeCount}} | {{bc.ProductName | uppercase}}
                                             </mat-option>
                                         </mat-select>
@@ -180,7 +180,7 @@
                                         [disabled]="!f.valid || !this.xferItem.ToShopID">Intiate Transfer</button>
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0 ms-3">
-                                    <button type="button" class="mr-3" mat-raised-button color="warn">Reset</button>
+                                    <button type="button" class="mr-3" mat-raised-button color="warn" (click)="formReset()">Reset</button>
                                 </div>
                             </div>
                             <hr style="margin: 0;">
