--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -94,6 +94,7 @@
               <a href="javascript:void(0)" [routerLink]="['/inventory/search-barcode']" id="collapseExample">Search Barcode</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/fitterList']" id="collapseExample">Fitter</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/preOrderList']" id="collapseExample">Pre-Order</a>
+              <a href="javascript:void(0)" [routerLink]="['/inventory/purchase-return']" id="collapseExample">Purchase Return</a>
             </div>
           </div>
           <!-- companyadmin end Purchseing -->
