--- a/web/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web/src/app/inventory/purchase-return/purchase-return.component.html
@@ -116,7 +116,7 @@
                         <!-- form end -->
                         <!-- list start -->
                         <div class="row">
-                            <div class="col-md-2 col-1 ps-md-0 ps-1">
+                            <div class="col-md-2 col-12 mt-2 mb-2  mb-md-0 mt-md-0 ">
                               <select class=" form-control"
                                 style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                 [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -128,21 +128,20 @@
                                 <option [ngValue]="500">Show 500 Row</option>
                               </select>
                             </div>
-                            <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
+                            <div class="col-md-3 col-12 mx-md-auto" style="margin-top:0px;">
                               <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
                                 [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
                                 (pageChange)="getList()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
                               </ngb-pagination>
                             </div>
                           </div>
-                        <form>
+                        <!-- list start -->
                             <div class="row">
                                 <div class="col-sm-12" style="overflow: auto; height: 450px;">
                                     <table class="table table-striped table-hover table-sm table-bordered"
                                         style="border: 2px solid #fff !important;">
                                         <thead>
-                                            <tr style="white-space: nowrap;"
-                                                [ngClass]="{'old': UpdateBarndType, 'new': !UpdateBarndType}">
+                                            <tr style="white-space: nowrap;">
                                                 <th>S No.</th>
                                                 <th>Product Category</th>
                                                 <th>Product Name</th>
@@ -161,7 +160,8 @@
                                             </tr>
                                         </thead>
                                         <tbody class="text-center">
-                                            <tr *ngFor="let s of SummaryList; let i = index;">
+                                            <tr *ngFor="let s of SummaryList; let i = index;" data-mdb-toggle="modal" data-mdb-target="#exampleModal"
+                                            (click)="openModal(content,s)">
                                                 <td>{{i+1}}</td>
                                                 <td>{{s.ProductTypeName}}</td>
                                                 <td>{{s.ProductName}}</td>
@@ -183,7 +183,6 @@
                                     </table>
                                 </div>
                             </div>
-                        </form>
                         <!-- list end -->
                     </div>
                 </div>
@@ -191,3 +190,78 @@
         </div>
     </div>
 </section>
+<!-- Modal -->
+<ng-template #content role="document" let-modal style="width: 500px !important;">
+    <div class="modal-header" style="height: 50px; border-bottom: #ff651e 3px solid;">
+      <h2 class="modal-title header pt-2" id="exampleModalLabel">Purchase Return</h2>
+      <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body p-0">
+        <form class="register-form m-3">
+            <div class="input-field col s12 d-none">
+                <input class="form-control" type="hidden">
+            </div>
+ <div class="row">
+    <div class="col-md-6">
+        <div class="row">
+            <div class="col-md-4">
+                <h3 style="color: #ff651e; font-weight: bold;"> Invoice Number</h3>
+            </div>
+            <div class="col-md-8">
+                <h3>{{modalData?.InvoiceNo}}</h3>
+            </div>
+            <div class="col-md-4">
+                <h3 style="color: #ff651e; font-weight: bold;">Available Quantity</h3>
+            </div>
+            <div class="col-md-8">
+                <h3>{{modalData?.Count}}</h3>
+            </div>
+            <div class="col-md-4">
+                <h3 style="color: #ff651e; font-weight: bold;">Supplier Name</h3>
+            </div>
+            <div class="col-md-8">
+                <h3>{{modalData?.SupplierName}}</h3>
+            </div>
+            <div class="col-md-4">
+                <h3 style="color: #ff651e; font-weight: bold;"> Shop Name </h3>
+            </div>
+            <div class="col-md-8">
+                <h3>{{modalData?.ShopName}} <span [style.color]="'blue'"
+                    *ngIf="modalData.AreaName !== 'null'">({{modalData.AreaName}})</span></h3>
+            </div>
+            <div class="col-md-4">
+                <h3 style="color: #ff651e; font-weight: bold;">Product Name</h3>
+            </div>
+            <div class="col-md-8">
+                <h3>{{modalData?.ProductTypeName}}/{{modalData?.ProductName}}</h3>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="row">
+            <div class="col-md-12 ">
+                <h3 style="color: #ff651e; font-weight: bold; margin: 0;">Return Process</h3>
+            </div>
+            <div class="col-md-12 ">
+                <mat-form-field class="example-full-width">
+                    <mat-label>Return Quantity</mat-label>
+                    <input matInput min="0" type="number" name="returnQuantity" [(ngModel)]="returnQuantity">
+                </mat-form-field>
+            </div>
+            <div class="col-md-12 ">
+                <mat-form-field class="example-full-width">
+                    <mat-label>Remark</mat-label>
+                    <input matInput name="remark" [(ngModel)]="remark">
+                </mat-form-field>
+            </div>
+            <div class="col-md-12 ">
+                <button  type="submit" mat-raised-button color="primary" (click)="purchasereturn()" data-dismiss="modal">Save</button>
+            </div>
+        </div>
+    </div>
+ </div>
+         
+         
+        </form>
+    </div>
+  </ng-template>
