inventory & chager report

--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -127,6 +127,8 @@
             <div class="drop-content" id="collapseExample">
               <a href="javascript:void(0)" [routerLink]="['/report/purchase']" id="collapseExample">Purchase</a>
               <a href="javascript:void(0)" [routerLink]="['/report/product-transfer']" id="collapseExample">Product Transfer</a>
+              <a href="javascript:void(0)" [routerLink]="['/report/inventory']" id="collapseExample">inventory</a>
+              <a href="javascript:void(0)" [routerLink]="['/report/service']" id="collapseExample">Service </a>
             </div>
           </div>
           <!-- companyadmin end report -->
