--- a/web/src/app/report/inventory-report/inventory-report.component.html
+++ b/web/src/app/report/inventory-report/inventory-report.component.html
@@ -241,7 +241,7 @@
                                       <td>{{s.ProductName}}</td>
                                       <td>{{s.CurrentStatus}}</td>
                                       <td>{{s.Barcode}}</td>
-                                      <td>{{s.Quantity}}</td>
+                                      <td>{{s.Count}}</td>
                                       <td>{{s.UnitPrice}}</td>
                                       <td>{{s.DiscountAmount}}</td>
                                       <td>{{s.SubTotal}}</td>
