--- a/web/src/app/report/service-report/service-report.component.html
+++ b/web/src/app/report/service-report/service-report.component.html
@@ -84,7 +84,7 @@
                                                         <td></td>
                                                         <td></td>
                                                         <td></td>
-                                                        <td>{{this.DetailtotalAmount}}</td>
+                                                        <td>{{this.DetailAmount}}</td>
                                                         <td></td>
                                                         <td></td>
                                                         <td data-mdb-toggle="modal" data-mdb-target="#exampleModal"
