--- a/web/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web/src/app/inventory/product-transfer/product-transfer.component.html
@@ -197,8 +197,10 @@
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-md-1">
-                                    <button  class="mr-1 shopPdf" type="button" ><mat-icon>picture_as_pdf</mat-icon></button>
+                                <div class="col-md-2">
+                                    <button  class="mr-1 shopPdf" type="button" ><i class="fa-sharp fa-solid fa-file-pdf"></i></button>
+                                    <button class="whatsapp ms-4 me-4"><i class="fa-brands fa-whatsapp" ></i></button>
+                                    <button class="email"><i class="fa-solid fa-envelope"></i></button>
                                 </div>
                                   <div class="col-md-3 col-4 mx-md-auto" style="margin-top:0px;">
                                     <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
