--- a/web/src/app/inventory/product-transfer/product-transfer.component.css
+++ b/web/src/app/inventory/product-transfer/product-transfer.component.css
@@ -32,8 +32,30 @@
     background: #3f51b5;
     color: white;
     border: none;
-    padding: 5% 10%;
-    border-radius: 12%;
+    padding: 7px;
+    border-radius: 5px;
     box-shadow: 1px 1px 10px #0003;
     cursor: pointer;
+    font-size: 19px;
   }
+
+  .email{
+    font-size: 20px;
+    background: #f71a1c;
+    border: none;
+    border-radius: 5px;
+    padding: 7px 6px;
+    color: #fff;
+    box-shadow: 1px 1px 10px #0003;
+    }
+    
+    .whatsapp{
+        font-size: 20px;
+        background: #72ff55;
+        border: none;
+        border-radius: 5px;
+        padding: 6px;
+        color: #fff;
+        box-shadow: 1px 1px 10px #0003;
+    }
+    
