--- a/web/src/app/report/purchase-report/purchase-report.component.html
+++ b/web/src/app/report/purchase-report/purchase-report.component.html
@@ -69,10 +69,10 @@
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 mb-0 ">
                         <button class="me-3" type="submit" mat-raised-button color="primary">
-                          <mat-icon>search</mat-icon> Search
+                          Search
                         </button>
                         <button type="button" mat-raised-button color="warn" (click)="purchaseFromReset()">
-                          <mat-icon>refresh</mat-icon> Reset
+                          Reset
                         </button>
                       </div>
                     </div>
@@ -269,10 +269,10 @@
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 mb-0 ">
                         <button class="me-3" type="submit" mat-raised-button color="primary">
-                          <mat-icon>search</mat-icon> Search
+                        Search
                         </button>
                         <button type="button" mat-raised-button color="warn" (click)="purchaseDetailsFromReset()">
-                          <mat-icon>refresh</mat-icon> Reset
+                           Reset
                         </button>
                       </div>
                     </div>
