--- a/web/src/app/report/service-report/service-report.component.html
+++ b/web/src/app/report/service-report/service-report.component.html
@@ -44,13 +44,11 @@
                                                     </mat-select>
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-md-1">
-                                                <button class="ml-0" mat-raised-button
-                                                    color="primary"><mat-icon>search</mat-icon> Search</button>
-                                            </div>
-                                            <div class="col-md-1">
+                                            <div class="col-md-2">
+                                                <button class="me-3" mat-raised-button
+                                                    color="primary">Search</button>
                                                 <button class="mr-0" type="button" mat-raised-button color="warn"
-                                                    (click)="f.reset()"><mat-icon>refresh</mat-icon> Reset</button>
+                                                    (click)="f.reset()">Reset</button>
                                             </div>
                                         </div>
                                     </form>
@@ -145,13 +143,12 @@
                                                     </mat-select>
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-md-1">
-                                                <button class="ml-0" mat-raised-button
-                                                    color="primary"><mat-icon>search</mat-icon> Search</button>
-                                            </div>
-                                            <div class="col-md-1">
+                                            <div class="col-md-2">
+                                                <button class="me-3" mat-raised-button
+                                                    color="primary"> Search</button>
+                                           
                                                 <button class="mr-0" type="button" mat-raised-button color="warn"
-                                                    (click)="f.reset()"><mat-icon>refresh</mat-icon> Reset</button>
+                                                    (click)="f.reset()"> Reset</button>
                                             </div>
                                         </div>
                                     </form>
