--- a/web/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/web/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -132,10 +132,10 @@
                                     <!--  spec end -->
                                     <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 mb-0 ">
                                         <button class="me-3" type="submit" mat-raised-button color="primary">
-                                            <mat-icon>search</mat-icon> Search
+                                             Search
                                         </button>
                                         <button type="button" mat-raised-button color="warn" (click)="FromReset()">
-                                            <mat-icon>refresh</mat-icon> Reset
+                                            Reset
                                         </button>
                                     </div>
                                 </div>
