--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -126,11 +126,8 @@
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
               <a href="javascript:void(0)" [routerLink]="['/report/purchase']" id="collapseExample">Purchase</a>
+              <a href="javascript:void(0)" [routerLink]="['/report/inventory']" id="collapseExample">Inventory</a>
               <a href="javascript:void(0)" [routerLink]="['/report/product-transfer']" id="collapseExample">Product Transfer</a>
-              <a href="javascript:void(0)" [routerLink]="['/report/inventory']" id="collapseExample">inventory</a>
-              <a href="javascript:void(0)" [routerLink]="['/report/service']" id="collapseExample">Charge & Service </a>
-              <a href="javascript:void(0)" [routerLink]="['/report/product-summary']" id="collapseExample">Product Summary </a>
-              <a href="javascript:void(0)" [routerLink]="['/report/product-expiry']" id="collapseExample">Product Expiry</a>
               <a href="javascript:void(0)" [routerLink]="['/report/eyetest']" id="collapseExample">Eye Test</a>
             </div>
           </div>
