--- a/web/src/app/report/inventory-report/inventory-report.component.html
+++ b/web/src/app/report/inventory-report/inventory-report.component.html
@@ -11,23 +11,26 @@
                                 </div>
                             </div>
                         </div>
+                      <mat-tab-group>
+                        <!-- Inventory Report -->
+                        <mat-tab label="Inventory">
                         <div class="body">
                             <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getInventory()">
                               <div class="row">
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
                                   <mat-form-field class="example-full-width mb-0">
                                     <mat-label>From</mat-label>
                                     <input matInput name="FromDate" type="date" [(ngModel)]="inventory.FromDate"
                                       #DOBcontrol />
                                   </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
                                   <mat-form-field class="example-full-width mb-0">
                                     <mat-label>To</mat-label>
                                     <input matInput type="date" name="ToDate" [(ngModel)]="inventory.ToDate" />
                                   </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
                                   <mat-form-field class="example-full-width mb-0">
                                     <mat-label>Supplier Name</mat-label>
                                     <mat-select name="Supplier" [(ngModel)]="inventory.SupplierID" editable="true"
@@ -43,7 +46,7 @@
                                     </mat-error>
                                   </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
                                   <mat-form-field class="example-full-width mb-0">
                                     <mat-label>Shop Name</mat-label>
                                     <mat-select name="shopID" [(ngModel)]="inventory.ShopID" multiple>
@@ -54,7 +57,7 @@
                                     </mat-select>
                                   </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Barcode</mat-label>
                                         <input matInput name="Barcode" [(ngModel)]="inventory.Barcode" #Barcodecontrol>
@@ -63,7 +66,7 @@
                                         </mat-error>
                                     </mat-form-field>
                                 </div>
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Current Status</mat-label>
                                         <mat-select name="Status" [(ngModel)]="inventory.CurrentStatus" #singleSelect>
@@ -162,7 +165,7 @@
                                   </div>
                                 </div>
                                 <!--  spec end -->
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 mb-0 ">
+                                <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
                                   <button class="me-3" type="submit" mat-raised-button color="primary">
                                      Search
                                   </button>
@@ -172,7 +175,7 @@
                                 </div>
                               </div>
                             </form>
-                            <!-- Purchase Detailed list -->
+                            <!--  list -->
                             <div class="body p-2">
                               <div class="col-sm-12" style="overflow: auto; height: 450px;">
                                 <table class="table table-striped table-hover table-sm table-bordered"
@@ -256,7 +259,113 @@
                                 </table>
                               </div>
                             </div>
-                          </div>
+                        </div>
+                        </mat-tab>
+                        <!-- Product Summary -->
+                        <mat-tab label="Product Summary">
+                          <div class="body">
+                            <form class="p-3 pb-0" #f1="ngForm">
+                                <div class="row">
+                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                                        <mat-form-field class="example-full-width mb-0">
+                                            <mat-label>From</mat-label>
+                                            <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate"
+                                                #DOBcontrol />
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                                        <mat-form-field class="example-full-width mb-0">
+                                            <mat-label>To</mat-label>
+                                            <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate" />
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
+                                        <mat-form-field class="example-full-width mb-0">
+                                          <mat-label>Supplier Name</mat-label>
+                                          <mat-select name="Supplier" [(ngModel)]="data.SupplierID" editable="true"
+                                            #singleSelect>
+                                            <mat-option [value]="0">All</mat-option>
+                                            <mat-option *ngFor="let sup of supplierList  let i = index;" [value]="sup.ID">
+                                              {{sup.Name}}<span style="float: right;">{{sup.MobileNo1}}
+                                              </span>
+                                            </mat-option>
+                                          </mat-select>
+                                          <mat-error>
+                                            Select Supplier
+                                          </mat-error>
+                                        </mat-form-field>
+                                      </div>
+                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                        <mat-form-field class="example-full-width mb-0">
+                                            <mat-label>Shop Name</mat-label>
+                                            <mat-select name="ShopID" [(ngModel)]="data.ShopID" multiple>
+                                                <mat-option [value]=0>All</mat-option>
+                                                <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
+                                                    <span [style.color]="'blue'"
+                                                        *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
+                                                </mat-option>
+                                            </mat-select>
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0">
+                                        <button class="me-3" mat-raised-button color="primary">Search</button>
+                                        <button type="button" mat-raised-button color="warn">Reset</button>
+                                    </div>
+                                </div>
+                            </form>
+                            <!-- list -->
+                            <div class="body p-2">
+                                <div class="col-sm-12" style="overflow: auto; height: 450px;">
+                                    <table class="table table-striped table-hover table-sm table-bordered"
+                                        style="border: 2px solid #fff !important;" id="ProductSummaryExcel">
+                                        <thead>
+                                            <tr style="white-space: nowrap;">
+                                                <th>S.No</th>
+                                                <th>ShopName</th>
+                                                <th>SupplierName</th>
+                                                <th>InvoiceNo </th>
+                                                <th>Barcode</th>
+                                                <th>CreatedOnDate</th>
+                                                <th>Product Category</th>
+                                                <th>Product Name</th>
+                                                <th>Available</th>
+                                                <th>Damaged</th>
+                                                <th>Sold</th>
+                                                <th>LostStolen</th>
+                                                <th>TransferPending</th>
+                                                <th>TotalQty</th>
+                                            </tr>
+                                            <tr class="totolRow" >
+                                                <td>
+                                                    <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
+                                                        aria-hidden="true" type="button" > </i>
+                                                    <i class="far fa-file-pdf ms-4"
+                                                        style="color: #2433be;font-size: 22px;cursor: pointer;"> </i>
+                                                </td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                            </tr>
+                                        </thead>
+                                        <tbody class="text-center">
+                                           
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                        </mat-tab>
+                      </mat-tab-group>
                     </div>
                 </div>
             </div>
@@ -294,4 +403,4 @@
             </table>
         </div>
     </div>
-  </ng-template>
+</ng-template>
