--- a/web/src/app/report/purchase-report/purchase-report.component.css
+++ b/web/src/app/report/purchase-report/purchase-report.component.css
@@ -14,4 +14,7 @@
     cursor: pointer !important;
 }
 
-
+.my_class {
+    color: rgb(255, 255, 255) !important;
+    background-color: rgb(242, 32, 32) !important;
+}
