--- a/web/src/app/report/purchase-report/purchase-report.component.html
+++ b/web/src/app/report/purchase-report/purchase-report.component.html
@@ -97,7 +97,7 @@
                             <th>Grand Total</th>
                             <th>SupplierGSTNo</th>
                           </tr>
-                          <tr class="totolRow" *ngIf="this.totalQty != null">
+                          <tr class="totolRow" *ngIf="this.totalQty != null && this.totalQty != '' ">
                             <td>
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXMaster()">
@@ -113,7 +113,8 @@
                             <td>{{this.totalQty}}</td>
                             <td>{{this.totalDiscount}}</td>
                             <td>{{this.totalUnitPrice}}</td>
-                            <td>{{this.totalGstAmount}}</td>
+                            <td data-mdb-toggle="modal" data-mdb-target="#exampleModal" (click)="openModal3(content3)">
+                              {{this.totalGstAmount}}</td>
                             <td>{{this.totalAmount}}</td>
                             <td></td>
                           </tr>
@@ -306,7 +307,7 @@
                             <th>WholeSale Price</th>
                             <th>Current Shop</th>
                           </tr>
-                          <tr class="totolRow" *ngIf="this.DetailtotalQty != null">
+                          <tr class="totolRow" *ngIf="this.DetailtotalQty != null && this.DetailtotalQty != '' ">
                             <td>
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXDetail()">
@@ -425,7 +426,7 @@
                                         <th>GST Amount</th>
                                         <th>GrandTotal</th>
                                     </tr>
-                                    <tr class="totolRow">
+                                    <tr class="totolRow" *ngIf="this.ChargeAmount != null && this.ChargeAmount != '' ">
                                         <td>
                                             <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
                                                 aria-hidden="true" type="button"
@@ -471,7 +472,7 @@
               <!-- Purchase Product Expiry -->
               <mat-tab label="Purchase (Product Expiry)">
                 <div class="body">
-                  <form class="p-3 pb-0" #f1="ngForm" >
+                  <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="purchaseProductExpiry()">
                     <div class="row">
                       <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
                         <mat-form-field class="example-full-width mb-0">
@@ -517,7 +518,7 @@
                         <mat-form-field class="example-full-width mb-0">
                           <mat-label>Select Product</mat-label>
                           <mat-select name="FieldType" [(ngModel)]="ProductExpiry.ProductCategory"
-                            (selectionChange)="getFieldList()" required #Typecontrol>
+                            (selectionChange)="getFieldList1()" required #Typecontrol>
                             <mat-option [value]=0>All</mat-option>
                             <mat-option *ngFor="let prod of prodList   let i = index;" [value]="prod.ID">
                               {{prod.Name | uppercase}}
@@ -530,12 +531,12 @@
                       </div>
                       <!-- spec start -->
                       <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0"
-                        *ngFor="let spec of specList ; let i = index;">
+                        *ngFor="let spec of specList1 ; let i = index;">
                         <div *ngIf="spec.FieldType === 'DropDown'" class="d-flex">
                           <mat-form-field class=" me-2 mb-0" *ngIf="spec.DisplayAdd === 0">
                             <mat-label>{{spec.FieldName}}</mat-label>
                             <mat-select name="{{spec.FieldName+'0'}}" [(ngModel)]="spec.SelectedValue"
-                              (selectionChange)="getFieldSupportData(i)" editable="true"
+                              (selectionChange)="getFieldSupportData1(i)" editable="true"
                               [required]="spec.Required === 1" #singleSelect>
                               <mat-option>
                               </mat-option>
@@ -552,7 +553,7 @@
                           <mat-form-field class=" mr-0 mb-0">
                             <mat-label>{{spec.FieldName}}</mat-label>
                             <input matInput name="{{spec.FieldName+'2'}}" [(ngModel)]="spec.SelectedValue"
-                              [required]="spec.Required === 1" (blur)="getFieldSupportData(i)">
+                              [required]="spec.Required === 1" (blur)="getFieldSupportData1(i)">
                             <mat-error>
                               {{spec.FieldName}} is Required
                             </mat-error>
@@ -596,12 +597,8 @@
                         </mat-form-field>
                       </div>
                       <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
-                        <button class="me-3" type="submit" mat-raised-button color="primary">
-                        Search
-                        </button>
-                        <button type="button" mat-raised-button color="warn" >
-                           Reset
-                        </button>
+                        <button class="me-3" type="submit" mat-raised-button color="primary"> Search </button>
+                        <button type="button" mat-raised-button color="warn" (click)="productExpiryFromReset()"> Reset </button>
                       </div>
                     </div>
                   </form>
@@ -609,7 +606,7 @@
                   <div class="body p-2">
                     <div class="col-sm-12" style="overflow: auto; height: 450px;">
                       <table class="table table-striped table-hover table-sm table-bordered"
-                        style="border: 2px solid #fff !important;" id="purchaseDetailExcel">
+                        style="border: 2px solid #fff !important;" id="ProductExpiry">
                         <thead>
                           <tr style="white-space: nowrap;">
                             <th>S.No</th>
@@ -632,9 +629,9 @@
                             <th>WholeSale Price</th>
                             <th>Product ExpiryDate</th>
                           </tr>
-                          <tr class="totolRow">
+                          <tr class="totolRow" *ngIf="this.ExpirytotalQty != null && this.ExpirytotalQty != '' ">
                             <td>
-                              <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button">
+                              <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button" (click)="exportAsXLSXExpiry()">
                               </i>
                               <i class="far fa-file-pdf ms-4" style="color: #2433be;font-size: 22px;cursor: pointer;">
                               </i>
@@ -645,14 +642,15 @@
                             <td></td>
                             <td></td>
                             <td></td>
+                            <td>{{this.ExpirytotalQty}}</td>
                             <td></td>
+                            <td>{{this.ExpirytotalDiscount}}</td>
+                            <td>{{this.ExpirytotalUnitPrice}}</td>
                             <td></td>
+                            <td data-mdb-toggle="modal" data-mdb-target="#exampleModal" (click)="openModal2(content2)">
+                              {{this.ExpirytotalGstAmount}}</td>
                             <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>{{this.ExpirytotalAmount}}</td>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -660,7 +658,27 @@
                           </tr>
                         </thead>
                         <tbody class="text-center">
-                          
+                           <tr  *ngFor="let s of ProductExpiryList; let i = index" >
+                            <td [ngClass]="{'my_class': s.Color === true}">{{ i+1 }}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.InvoiceNo}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.PurchaseDate}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.ProductTypeName}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.ProductName}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.ShopName}}<span [style.color]="'blue'" *ngIf="s.AreaName !== 'null'">({{s.AreaName}})</span></td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.SupplierName}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.Quantity}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.UnitPrice}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.DiscountAmount}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.SubTotal}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.GSTPercentage}}%</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.GSTAmount}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.GSTType}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.TotalAmount}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.PaymentStatus}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.RetailPrice}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.WholeSalePrice}}</td>
+                            <td [ngClass]="{'my_class': s.Color === true}">{{s.ProductExpDate}}</td>
+                           </tr>
                         </tbody>
                       </table>
                     </div>
@@ -674,7 +692,41 @@
     </div>
   </div>
 </section>
-<!-- model -->
+
+<!-- model detail-->
+<ng-template #content3 role="document" let-modal>
+  <div class="modal-header" style="height: 50px;">
+    <h3 class="modal-title header pt-2" id="exampleModalLabel">GST Amount List</h3>
+    <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+      <div class="row">
+          <table class="table table-striped table-hover table-sm table-bordered"
+            style="border: 2px solid #fff !important;">
+            <thead>
+              <tr>
+                <th>GSTType</th>
+                <th>GSTAmount</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="text-center" *ngFor="let gst of gstMaster let i = index;">
+                <td>{{gst.GSTType}}</td>
+                <td>{{gst.Amount}}</td>
+              </tr>
+            </tbody>
+            <tfoot class="text-center">
+              <tr > 
+                <th style="color: red; font-weight: 600;">Total Amt</th>
+                <th style="color: red; font-weight: 600;">{{this.totalGstAmount}}</th>
+              </tr>
+            </tfoot>
+          </table>
+      </div>
+  </div>
+</ng-template>
+
+<!-- model detail-->
 <ng-template #content role="document" let-modal>
   <div class="modal-header" style="height: 50px;">
     <h3 class="modal-title header pt-2" id="exampleModalLabel">GST Amount List</h3>
@@ -732,7 +784,40 @@
               <tfoot class="text-center">
                   <tr>
                       <th style="color: red; font-weight: 600;">Total Amt</th>
-                      <th style="color: red; font-weight: 600;">{{this.DetailtotalGstAmount}}</th>
+                      <th style="color: red; font-weight: 600;">{{this.ChargetotalGstAmount}}</th>
+                  </tr>
+              </tfoot>
+          </table>
+      </div>
+  </div>
+</ng-template>
+
+<!--ProductExpiry model -->
+<ng-template #content2 role="document" let-modal>
+  <div class="modal-header" style="height: 50px;">
+      <h3 class="modal-title header pt-2" id="exampleModalLabel">GST Amount List</h3>
+      <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+  </div>
+  <div class="modal-body">
+      <div class="row">
+          <table class="table table-striped table-hover table-sm table-bordered"
+              style="border: 2px solid #fff !important;">
+              <thead>
+                  <tr>
+                      <th>GSTType</th>
+                      <th>GSTAmount</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr class="text-center" *ngFor="let gst of gstExpirys let i = index;">
+                      <td>{{gst.GSTType}}</td>
+                      <td>{{gst.Amount}}</td>
+                  </tr>
+              </tbody>
+              <tfoot class="text-center">
+                  <tr>
+                      <th style="color: red; font-weight: 600;">Total Amt</th>
+                      <th style="color: red; font-weight: 600;">{{this.ExpirytotalGstAmount}}</th>
                   </tr>
               </tfoot>
           </table>
