--- a/web/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web/src/app/inventory/purchase-return/purchase-return.component.html
@@ -38,8 +38,8 @@
                                   <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>System CN No.</mat-label>
-                                        <input matInput name="SystemCN " [(ngModel)]="selectedPurchaseMaster.SystemCN"
-                                        required   (ngModelChange)="selectedPurchaseMaster.SystemCN = onChange($event)" autocomplete="off">
+                                        <input matInput name="SystemCn " [(ngModel)]="selectedPurchaseMaster.SystemCn"
+                                        required   (ngModelChange)="selectedPurchaseMaster.SystemCn = onChange($event)" autocomplete="off">
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-2 col-lg-4 col-md-6 col-sm-12 mb-0">
